Hc Svnt Dracones 2E: v.1.60 ,full XP table automation, minor body_exert and readiness fix

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.50C</span>
+<span class="version bold">Sheet Version: 1.60</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -314,7 +314,7 @@
   <div class="inv-head section border flex-row">
     <span>Base Mass <input                       type="number" name="attr_mass_base" value="1"></span>
     <span title="Hex Occupation">+Hex Oc. <input type="number" name="attr_cargo_hex"  value="1"></span>
-    <span>+Body Exert <input                     type="number" name="attr_body_exert" value="1"></span>
+    <span>+Body Exert <input                     type="number" name="attr_body_exert" value="0"></span>
     <span>+/- Misc <input                        type="number" name="attr_cargo_misc" value="1"></span>
     <span>= Cargo Points <input                  type="number" name="attr_cargo_points" value="(@{mass_base}+@{cargo_hex}+@{body_exert}+@{cargo_misc})" class="txtfield" disabled="true"></span>
     <span class="small-font">Tiny Object:5 points |Small Object:1 point |Medium Object:3 points |Large Object:5 points |Very Large Object:8 points</span>
@@ -1027,8 +1027,8 @@ const int = score => parseInt(score, 10) || 0;
 
 
 const xp_mind_stat = ["mind_stat1","mind_stat4","mind_stat7","mind_stat10","mind_stat13"];
-const xp_mind_perceive = ["mind_perceive1","mind_perceive4","mind_perceive7","mind_perceive10","mind_perceive13",];
-const xp_body_stat = ["body_stat1","body_stat4","body_stat7","body_stat10","body_stat13",];
+const xp_mind_perceive = ["mind_perceive1","mind_perceive4","mind_perceive7","mind_perceive10","mind_perceive13"];
+const xp_body_stat = ["body_stat1","body_stat4","body_stat7","body_stat10","body_stat13"];
 const xp_body_perceive = ["body_perceive1","body_perceive4","body_perceive7","body_perceive10","body_perceive13"];
 const xp_community_stat = ["community_stat1","community_stat4","community_stat7","community_stat10","community_stat13"];
 const xp_community_perceive = ["community_perceive1","community_perceive4","community_perceive7","community_perceive10","community_perceive13"];
@@ -1057,7 +1057,7 @@ const profstracker = ["mind_stat2a","mind_stat5a", "mind_stat8a","mind_stat11a",
 
 const focustracker = ["mind_stat2b","mind_stat5b","mind_stat8b","mind_stat11b","mind_perceive3b","mind_perceive6b","mind_perceive9b","mind_perceive12b","body_stat3a","body_stat3a","body_perceive3a","body_perceive6a","body_perceive9a","community_stat2a","community_stat2a","community_stat5a","community_stat6a","community_stat9a","community_stat12a","community_perceive2a","community_perceive12a"];
 
-const readinesstracker = ["mind_stat9b","mind_stat12b","mind_perceive2b","mind_perceive5b","body_stat3b","body_stat9b","body_stat12b","bodyperceive3b","body_perceive9b","body_perceive12b","community_stat3b","community_stat6b","community_stat12b","community_perceive3b","community_perceive6b","community_perceive9b","community_perceive12b"];
+const readinesstracker = ["mind_stat9b","mind_stat12b","mind_perceive2b","mind_perceive5b","body_stat3b","body_stat9b","body_stat12b","body_perceive3b","body_perceive9b","body_perceive12b","community_stat3b","community_stat6b","community_stat12b","community_perceive3b","community_perceive6b","community_perceive9b","community_perceive12b"];
 
 const movetracker = ["body_stat2a","body_stat5a","body_stat8a","body_stat11a"];
 
@@ -1072,7 +1072,7 @@ const creditstracker = ["community_stat3a","community_stat9b","community_stat3a"
 checkboxes.forEach(checkbox => {
     on(`change:${checkbox}`, (eventInfo) => {
         console.log("checkbox changed:" + checkbox);
-        let xplist = [ checkbox, "exp_total", "exp_spent", "exp", "boons_track", "focus_track", "readiness_track", "profs_track", "move_track", "init_track", "techniques_track", "notoriety_track", "credits", "progression_credits_track", "mind_exert","mind_perceive", "body_exert","body_perceive", "community_exert","community_perceive","move_base","readiness_max","focus_max","techniques"];
+        let xplist = [ checkbox, "exp_total", "exp_spent", "exp", "boons_track", "focus_track", "readiness_track", "profs_track", "move_track", "init_track", "techniques_track", "notoriety_track", "credits", "progression_credits_track", "mind_exert","mind_perceive", "body_exert","body_perceive", "community_exert","community_perceive","move_base","readiness_max","mass_focus_max","initiative_max","techniques"];
         console.log(xplist);
         getAttrs(xplist, values => {
             let xp_total = int(values["exp_total"]);
