--- a/Our Last Best Hope/ourlastbesthope.html
+++ b/Our Last Best Hope/ourlastbesthope.html
@@ -6,7 +6,10 @@
 <div class="body">
     <p class="header">
 
-        <span data-i18n="name"></span>: <input type="text" name="attr_character_name" class="fields"> <span class="harm_buttons"><span data-i18n="harm"></span>: <input type="radio" name="attr_harm" class="harm" value="1"><span></span>
+        <span data-i18n="name"></span>: <input type="text" name="attr_character_name" class="fields"> <span class="harm_buttons">
+        <span data-i18n="harm"></span>: 
+        <input type="radio" name="attr_harm" class="harm" value="0" checked="checked">
+        <input type="radio" name="attr_harm" class="harm" value="1"><span></span>
         <input type="radio" name="attr_harm" class="harm" value="2"><span></span>
         <input type="radio" name="attr_harm" class="harm" value="3"><span></span>
         <input type="radio" name="attr_harm" class="harm" value="4"><span></span>
